trying to fix broken ui

--- a/FrontEnd/public/assets/stylesheets/dashboard/dashboard.css
+++ b/FrontEnd/public/assets/stylesheets/dashboard/dashboard.css
@@ -2,8 +2,14 @@ html, body {
     height: 100%;
 }
 
+.main_flex {
+    display: flex;
+    flex-direction: row;
+}
+
 .sensor_panel {
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
     justify-content: space-around;
     width: 25%;
@@ -20,9 +26,7 @@ html, body {
 }
 
 .webcam_window {
-    position: relative;
-    display: inline-block;
-    width: 75%;
+    flex-grow: 2;
     height: 100%;
     background-color: #f1f1f1;
 }
